Updating microservices