@@ -57,57 +57,62 @@ import java.util.stream.Collectors;
 @Configuration
 @RequiredArgsConstructor
 public class AuthorizationServerConfig {
-
+    // http://localhost:8080/.well-known/openid-configuration
+    private static final String AUTHORITY_KEY = "authorities";
     private final JwtConfiguration jwtConfiguration;
-    private static final String AUTHORITY_KEY="authorities";
 
     @Bean
     @Order(1)
-    public SecurityFilterChain oauth2ServerConfig(HttpSecurity http, RegisteredClientRepository registeredClientRepository) throws Exception{
+    public SecurityFilterChain oauth2ServerConfig(HttpSecurity http, RegisteredClientRepository registeredClientRepository, OAuth2TokenCustomizer<JwtEncodingContext> customizer) throws Exception {
         http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
-        var authorizationConfig = OAuth2AuthorizationServerConfigurer.authorizationServer();
+
+        // Change this line:
+        var authorizationConfig = new OAuth2AuthorizationServerConfigurer();
+
         http
                 .securityMatcher(authorizationConfig.getEndpointsMatcher())
-                .with(authorizationConfig, authorizationServer ->
-                        authorizationServer.oidc(Customizer.withDefaults())
-                                        .authorizationServerSettings(authorizationServerSettings())
-                                        .registeredClientRepository(registeredClientRepository)
-                                        .tokenGenerator(tokenGenerator())
-                                        .clientAuthentication(authentication -> {
-                                            authentication.authenticationConverter(new ClientRefreshTokenAuthenticationConverter());
-                                            authentication.authenticationProvider(new ClientAuthenticationProvider(registeredClientRepository));
-                     }))
-                        .authorizeHttpRequests(authorize -> authorize.anyRequest().authenticated());
-        http
-                .exceptionHandling(exceptions -> exceptions.accessDeniedPage("/accessdenied")
-                        .defaultAuthenticationEntryPointFor(new LoginUrlAuthenticationEntryPoint("/login"),
-                                new MediaTypeRequestMatcher(MediaType.TEXT_HTML)));
+                .with(authorizationConfig, authorizationServer -> authorizationServer
+                        .oidc(Customizer.withDefaults())
+                        .authorizationServerSettings(authorizationServerSettings())
+                        .registeredClientRepository(registeredClientRepository)
+                        .tokenGenerator(tokenGenerator())
+                        .clientAuthentication(authentication -> {
+                            authentication.authenticationConverter(new ClientRefreshTokenAuthenticationConverter());
+                            authentication.authenticationProvider(new ClientAuthenticationProvider(registeredClientRepository));
+                        }))
+                .authorizeHttpRequests(authorize -> authorize.anyRequest().authenticated());
+        http.exceptionHandling(exceptions -> exceptions.accessDeniedPage("/accessdenied")
+                .defaultAuthenticationEntryPointFor(new LoginUrlAuthenticationEntryPoint("/login"), new MediaTypeRequestMatcher(MediaType.TEXT_HTML)));
         return http.build();
     }
-
     @Bean
     @Order(2)
-    public SecurityFilterChain securityFilterChain(
-            HttpSecurity http,
-            AuthenticationSuccessHandler authenticationSuccessHandler // Injected success handler
-    ) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()));
         http.authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/login").permitAll()
+                .requestMatchers("/login", "/oauth2/authorize/**", "oauth2/authorize").permitAll()
                 .requestMatchers(POST, "/logout").permitAll()
                 .requestMatchers("/mfa").hasAuthority("MFA_REQUIRED")
                 .anyRequest().authenticated());
         http.formLogin(login -> login
                 .loginPage("/login")
-                .successHandler(authenticationSuccessHandler) // Use the injected handler
-                .failureHandler(new SimpleUrlAuthenticationFailureHandler("/login?error")));
-        http.logout(logout -> logout.logoutSuccessUrl("http://localhost:4200")
+                .successHandler(new MfaAuthenticationHandler("/mfa", "MFA_REQUIRED"))
+                .failureHandler(new SimpleUrlAuthenticationFailureHandler("/login")));
+        http.logout(logout -> logout.logoutSuccessUrl("http://localhost:3000")
                 .addLogoutHandler(new CookieClearingLogoutHandler("JSESSIONID")));
         return http.build();
     }
 
     @Bean
-    public AuthenticationSuccessHandler authenticationSuccessHandler(){
+    public OAuth2TokenGenerator<? extends OAuth2Token> tokenGenerator() {
+        var jwtGenerator = UserJwtGenerator.init(new NimbusJwtEncoder((jwtConfiguration.jwkSource())));
+        jwtGenerator.setJwtCustomizer(customizer());
+        OAuth2TokenGenerator<OAuth2RefreshToken> refreshTokenOAuth2TokenGenerator = new ClientOAuth2RefreshTokenGenerator();
+        return new DelegatingOAuth2TokenGenerator(jwtGenerator, refreshTokenOAuth2TokenGenerator);
+    }
+
+    @Bean
+    public SavedRequestAwareAuthenticationSuccessHandler authenticationSuccessHandler() {
         return new SavedRequestAwareAuthenticationSuccessHandler();
     }
 
@@ -117,44 +122,34 @@ public class AuthorizationServerConfig {
     }
 
     @Bean
-    public OAuth2TokenGenerator<? extends OAuth2Token> tokenGenerator(){
-        var jwtGenerator = UserJwtGenerator.init(new NimbusJwtEncoder((jwtConfiguration.jwkSource())));
-        jwtGenerator.setJwtCustomizer(customizer());
-        OAuth2TokenGenerator<OAuth2RefreshToken> refreshTokenOAuth2TokenGenerator=new ClientOAuth2RefreshTokenGenerator();
-        return new DelegatingOAuth2TokenGenerator(jwtGenerator,refreshTokenOAuth2TokenGenerator);
-    }
-
-    @Bean
-    public OAuth2TokenCustomizer<JwtEncodingContext> customizer(){
+    public OAuth2TokenCustomizer<JwtEncodingContext> customizer() {
         return context -> {
-            if(ACCESS_TOKEN.equals(context.getTokenType())){
-                context.getClaims().claims(claims -> claims.put(AUTHORITY_KEY,getAuthorities(context)));
+            if(ACCESS_TOKEN.equals(context.getTokenType())) {
+                context.getClaims().claims(claims -> claims.put(AUTHORITY_KEY, getAuthorities(context)));
             }
         };
     }
 
-
-
     @Bean
-    public RegisteredClientRepository registeredClientRepository(JdbcTemplate jdbcTemplate){
-        return  new JdbcRegisteredClientRepository(jdbcTemplate);
+    public RegisteredClientRepository registeredClientRepository(JdbcTemplate jdbcTemplate) {
+        return new JdbcRegisteredClientRepository(jdbcTemplate);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         var corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(List.of("http://securedoc.com", "http://192.168.1.159:3000", "http://localhost:8080", "http://localhost:4200","http://localhost:4200", "100.14.214.212:3000",  "http://96.255.228.129:3000", "http://localhost:4200","http://localhost:4200", "http://localhost:3000", "http://securecapita.org", "http://192.168.1.216:3000"));
-        corsConfiguration.setAllowedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, X_REQUESTED_WITH, ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
-        corsConfiguration.setExposedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, X_REQUESTED_WITH, ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
+        corsConfiguration.setAllowedOrigins(List.of("http://192.168.1.157:3000", "http://localhost:3000", "http://192.168.1.159:3000", "http://localhost:4200", "100.14.214.212:3000",  "http://localhost:4200", "http://localhost:3000", "http://192.168.1.216:3000"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, "X_REQUESTED_WITH", ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
+        corsConfiguration.setExposedHeaders(Arrays.asList(ORIGIN, ACCESS_CONTROL_ALLOW_ORIGIN, CONTENT_TYPE, ACCEPT, AUTHORIZATION, "X_REQUESTED_WITH", ACCESS_CONTROL_REQUEST_METHOD, ACCESS_CONTROL_REQUEST_HEADERS, ACCESS_CONTROL_ALLOW_CREDENTIALS));
         corsConfiguration.setAllowedMethods(Arrays.asList(GET.name(), POST.name(), PUT.name(), PATCH.name(), DELETE.name(), OPTIONS.name()));
         corsConfiguration.setMaxAge(3600L);
         var source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/", corsConfiguration);
+        source.registerCorsConfiguration("/**", corsConfiguration);
         return source;
     }
 
-    private String getAuthorities(JwtEncodingContext context){
+    private String getAuthorities(JwtEncodingContext context) {
         return context.getPrincipal().getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.joining(","));
     }
 }
